#2 generate short url after form submitted

--- a/app/views/transforms/_form.html.haml
+++ b/app/views/transforms/_form.html.haml
@@ -9,6 +9,6 @@
           %li= message
   .row
     .col-md-6
-      = f.text_field :short_url, placeholder: "input your url here", class: 'form-control'
+      = f.text_field :long_url, placeholder: "input your url here", class: 'form-control'
     .col-md-3
       = f.submit "Get a nicer url", class: 'btn btn-default'
