--- a/app/assets/stylesheets/transforms.scss
+++ b/app/assets/stylesheets/transforms.scss
@@ -1,8 +1,8 @@
 // Place all the styles related to the transforms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.container {
-  margin: 30px auto 0 auto;
+.body-container {
+  margin: 80px auto 0 auto;
   width: 85%;
   min-height: 500px;
 }
