--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    .container.jumbotron
+    = render "layouts/header"
+    .body-container.container.jumbotron
       = yield
+    = render "layouts/footer"
