change home page style

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,3 +13,11 @@
    color: black;
   }
 }
+.get-start {
+  margin: 20px;
+  a {
+    width: 200px;
+    height: 50px;
+    font-size: 26px;
+  }
+}
