--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,7 @@
-%h1 Short Url Generator
+.col-md-offset-3
+  %h1 Short Url Generator
 
-%h3 One step transfer a long url to a nicer url
+  %h3 One step transfer a long url to a nicer url
+
+  .get-start
+    = link_to "Get Start", new_transform_path, class: "btn btn-primary"
